# SPEI

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  genindex.html  index.html  mypy.ini  objects.inv  plot.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  si.py  util.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  question.yml
.github/workflows/: auto-author-assign.yml  documentation.yml  draft-pdf.yml  python-publish.yml  tests.yml
_api/: modules.html  spei.climdex.html  spei.dist.html  spei.html  spei.knmi.html  spei.plot.html  spei.rai.html  spei.si.html  spei.utils.html
_sources/: index.md.txt
_sources/_api/: modules.rst.txt  spei.climdex.rst.txt  spei.dist.rst.txt  spei.knmi.rst.txt  spei.plot.rst.txt  spei.rai.rst.txt  spei.rst.txt  spei.si.rst.txt  spei.utils.rst.txt
_sources/examples/: example05_multiyear_drought.ipynb.txt  example09_joss_paper.ipynb.txt  index.md.txt
doc/_static/: logo.pptx  make_logo.py
doc/examples/: example01_indices.ipynb  example02_distributions.ipynb  example03_drought_NL.ipynb  example04_package_comparison.ipynb  example05_multiyear_drought.ipynb  example06_treshold.ipynb  example07_knmi.ipynb  example08_rai.ipynb  example_testr.py
doc/examples/data/: B32C0572_DEBILT.csv  neerslagtekort.txt
docs/: conf.py  index.md
docs/examples/: example01_indices.ipynb  example02_distributions.ipynb  example03_drought_prediction.ipynb  example04_package_comparison.ipynb  example05_multiyear_drought.ipynb  example06_treshold.ipynb  example07_knmi.ipynb  example08_rai.ipynb  example09_joss_paper.ipynb  index.md
docs/examples/data/: CABAUW.csv
examples/: example01_indices.html  example01_indices.ipynb  example02_distributions.html  example02_distributions.ipynb  example03_drought_NL.ipynb  example03_drought_prediction.html  example03_drought_prediction.ipynb  example04_package_comparison.html  example04_package_comparison.ipynb  example05_multiyear_drought.html  example05_multiyear_drought.ipynb  example06_treshold.html  example06_treshold.ipynb  example07_knmi.html  example07_knmi.ipynb  example08_rai.html  example08_rai.ipynb  example09_joss_paper.html  example09_joss_paper.ipynb  index.html
paper/: example09_joss_paper.ipynb  meteo.csv  paper.bib  paper.ipynb  paper.md  series.csv
spei/: __init__.py  plot.py  si.py
src/spei/: __init__.py  _typing.py  _version.py  climdex.py  dist.py  knmi.py  plot.py  rai.py  si.py  typing.py  utils.py
tests/: conftest.py  fixtures.py  test_climdex.py  test_dist_utils.py  test_knmi.py  test_plots.py  test_rai.py  test_si.py  test_validate.py  test_version.py
tests/compare_R/: spei_r.csv  test_martin.R  use_r.txt
tests/data/: B11C0329_EAGMARYP.csv
