[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spei"
dynamic = ["version"]
authors = [{ name = "Martin Vonk", email = "vonk.mart@gmail.com" }]
description = "A simple Python package to calculate drought indices for time series such as the SPI, SPEI and SGI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib", "pandas"]
classifiers = [
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Topic :: Scientific/Engineering :: Hydrology',
        'Intended Audience :: Science/Research',
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/martinvonk/spei"
repository = "https://github.com/martinvonk/spei"

[project.optional-dependencies]
notebook = ["ipykernel", "pastas"]
ruffing = ["ruff"]
typing = ["mypy", "pandas-stubs"]
pytesting = ["pytest>=7", "pytest-cov", "pytest-sugar"]
coveraging = ["coverage"]
dev = ["spei[ruffing,typing,pytesting,coveraging]", "tox"]

[tool.setuptools.dynamic]
version = { attr = "spei._version.__version__" }

[tool.mypy]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ['matplotlib.*', 'scipy.stats.*']
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
show-fixes = true
fix = true

[tool.tox]
requires = ["tox>=4"]
env_list = ["py310", "py311", "py312", "py313", "type", "ruff"]

[tool.tox.env_run_base]
description = "run unit tests"
extras = ["pytesting"]
commands = [["pytest", "tests"]]

[tool.tox.env.type]
description = "run type checks"
basepython = "py310"
extras = ["typing"]
commands = [["mypy", "src"]]

[tool.tox.env.ruff]
description = "run ruff checks"
basepython = "py310"
extras = ["ruffing"]
commands = [
        [
                "ruff",
                "check",
                "--extend-select",
                "I",
                "--preview",
        ],
        [
                "ruff",
                "format",
                "--check",
        ],
]

[tool.tox.env.coverage]
description = "get coverage report xml"
basepython = "py310"
extras = ["coveraging", "pytesting"]
commands = [["coverage", "run", "-m", "pytest", "tests"], ["coverage", "xml"]]
